# Prahari

./: .gitignore  00_CLAUDE_IMPLEMENTATION_RULES.md  00_IMPLEMENTATION_RULES.md  01_PROJECT_CONTEXT.md  02_SENTINEL_Product_Requirements_Bible.md  03_design.md  04_demo.md  LICENSE  README.md
codebase/backend/: .env.example  BACKEND_AUDIT.md  BACKEND_MAP.md  Dockerfile  README.md  pyproject.toml
codebase/backend/.sentinel_state/: sentinel.db-shm  sentinel.db-wal
codebase/backend/app/: __init__.py  config.py  container.py  main.py  seed.py
codebase/backend/app/actions/: service.py
codebase/backend/app/agents/: model_router.py  orchestrator.py  prompts.py  providers.py
codebase/backend/app/analytics/: service.py
codebase/backend/app/api/: actions.py  auth_shell.py  compliance.py  corrections.py  deps.py  documents.py  investigations.py  misc.py  resolution.py  schemas.py
codebase/backend/app/audit/: sink.py
codebase/backend/app/auth/: abac.py  identity.py  rbac.py
codebase/backend/app/corrections/: service.py
codebase/backend/app/decisions/: replay.py
codebase/backend/app/domain/: __init__.py  errors.py  graph_types.py  models.py
codebase/backend/app/embeddings/: local_embedder.py
codebase/backend/app/graph/: provenance_sink.py
codebase/backend/app/ingestion/: drawing_schema.py  drawings.py  extractors.py  ocr.py  pipeline.py
codebase/backend/app/investigations/: service.py
codebase/backend/app/knowledge/: contradictions.py  decay.py
codebase/backend/app/orgmemory/: service.py
codebase/backend/app/ports/: __init__.py
codebase/backend/app/resilience/: circuit_breaker.py  degradation.py  rate_limit.py
codebase/backend/app/resolution/: scoring.py  service.py
codebase/backend/app/retrieval/: context.py  router.py  service.py
codebase/backend/app/rules/: engine.py
codebase/backend/app/stores/: embedded.py  production.py  registry.py
codebase/backend/data/corpus/: PID_BFW_system_P-101B.md  asset_identifiers.json  asset_register.csv  compliance_OISD_P-101B.md  condition_monitoring_P-101B.csv  datasheet_P-101B_boiler_feed_pump.md  (+10 more)
codebase/backend/prompts/: manifest.json
codebase/backend/tests/: conftest.py  test_critical_path.py  test_drawings_and_contradictions.py  test_pilot.py
codebase/backend/tools/: make_pid_drawing.py
docs/: todo.md  (+8 more)
(+88 files in other folders)
