[project]
name = "prahari-core"
version = "1.0.0"
description = "Prahari — Industrial Decision Intelligence Operating System (core monolith)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "websockets>=12.0",
    "PyJWT>=2.8",
    "cryptography>=42.0",
]

[project.optional-dependencies]
production = [
    "neo4j>=5.20",
    "qdrant-client>=1.9,<1.12",  # keep in step with the qdrant server image (compose)
    "psycopg[binary]>=3.1",
    "redis>=5.0",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "black>=24.4",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
files = ["app"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
